# obs-gradient-source

./: CMakeLists.txt  README.md  buildspec.json  gradient-source.c  installer.iss.in
.github/workflows/: build.yml
CI/macos/: gradient-source.pkgproj
data/locale/: en-US.ini  pt-BR.ini  zh-CN.ini
